# fathomline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/brand/: README.md  brand-tokens.css
deploy/: Dockerfile
deploy/quickstart/: .env.example  README.md  docker-compose.yml
docs/: STORY.md
docs/api/: README.md  index.html  openapi.json
docs/architecture/: 01-architecture-overview.md
docs/decisions/: ADR-001-to-013.md  ADR-015-device-id-in-entry-identity.md  ADR-016-single-host-and-distributed-topologies.md  ADR-017-defense-in-depth-ingest-authentication.md  ADR-018-synchronous-post-drain-finalize.md  ADR-019-tamper-evident-audit-chain-hardening.md  ADR-020-bounded-memory-rollup-recompute.md  ADR-021-content-aware-organize-subsystem.md  ADR-022-pluggable-inference-provider.md  ADR-023-reversible-move-rename-remediation-action.md  ADR-024-cross-host-reconciliation.md  ADR-025-production-signed-job-dispatch-channel.md  ADR-026-agent-deployment-subsystem.md  ADR-027-native-windows-agent.md  ADR-028-rclone-cloud-backend.md  ADR-029-remote-volume-representation.md  ADR-030-reflink-block-clone-reclaim.md  ADR-031-notifications-alerts-digests.md  ADR-032-cross-mount-duplicate-alias-detection.md  ADR-033-agent-config-report-and-override.md  ADR-034-scan-scope-builder.md  ADR-035-ai-concierge.md  ADR-036-scan-concurrency-coordinator.md  ADR-037-onboarding-suitability-wizard.md  ADR-038-runtime-settings-store.md  ADR-039-notification-channels.md  ADR-040-proactive-watch.md  ADR-041-fathomline-brand-application.md  ADR-042-frontend-readability-tabbed-settings.md  ADR-043-frontend-ux-overhaul.md
docs/guides/: deploying-fathomline.md  multi-host-deployment.md
migrations/: README.md  env.py
migrations/versions/: 3a48eed79c3c_initial_catalogue_schema.py  52044159af8a_fullbit_dedup.py  55dee382f31a_merge_ai_suite_feature_heads_concierge_.py  9e41f1184d8a_incremental_change_feed.py  a1c9f3b6d720_organize_move_plan_columns.py  a2e8f4c1d9b6_dup_member_mount_alias.py  a7c3e9f1b2d4_settings_store.py  b3d1e8f4a960_remediation_plan_volume_scope.py  b4d7e9f2a1c5_agent_config_report_override.py  b7e2c1a4d9f0_auth_rbac_schema.py  b8e4c2f6a1d9_host_facts.py  c1a2b3d4e5f6_concierge_fs_entry_embedding.py  c3f1a9b8e210_remediation_write_path.py  c7e2f4a91b80_dup_group_scope_jsonb.py  d4a7c2e91b53_preview_cache_meta.py  d5e6f7a8b9c0_scan_lease.py  d8f1a3c64e2b_fs_entry_provider_hash.py  e1f2a3b4c5d6_notification.py  e5b3c7f2a9d1_audit_prev_hash_unique.py  e9a2b5d71c34_agent_run_observability.py  f1b6c2a9d34e_volume_display_name.py  f6c4d8a1b2e7_fs_entry_dev_identity.py
packaging/windows/: ADDING-DRIVES.md  README.md  build-agent-exe.ps1  fathomline-agent.spec
scripts/: README.md  discover_storage_layout.sh  export_openapi.py  probe_truenas_preview_feasibility.sh
scripts/e2e/: README.md  mock_ollama.py  run_e2e.sh  seed_e2e.py  stories.mjs  verify.py
scripts/localdev/: README.md  run.sh  screenshot.mjs  seed.py
src/fathom/: __init__.py  logging.py
tests/: conftest.py  test_paths.py  test_winpaths.py
tests/adapters/: __init__.py  conftest.py  test_conformance.py  test_generic_linux.py  test_registry.py  test_truenas.py  test_ws.py
tests/agent/: test_browse_lister.py  test_config.py  test_config_override.py  test_feed.py  test_fullbit_scanner.py  test_host_facts.py  test_incremental_staging.py  test_listen_mode.py  test_listener.py  test_loader.py  test_move_executor.py  test_preview_serve.py  test_push.py  test_remediation.py  test_runner.py  test_staging.py  test_supervisor.py  test_walker.py
tests/api/: conftest.py  test_admin_users.py  test_agent_browse.py  test_agent_config.py  test_agent_jobs.py  test_agent_runs.py  test_agents_router.py  test_auth.py  test_auth_audit.py  test_auth_mfa.py  test_changes.py  test_charts.py  test_charts_downsample.py  test_concierge.py  test_config.py  test_deployment_router.py  test_dispatch_e2e.py  test_duplicates_router.py  test_finalize.py  test_fullbit_ingest.py  test_incremental_ingest.py  test_ingest.py  test_notifications.py  test_notifications_channels.py  test_onboarding_setting.py  test_openapi.py  test_organize.py  test_organize_apply.py  test_preview_pull.py  test_provider_duplicates_route.py  test_read.py  test_reconcile.py  test_remediation_endpoints.py  test_remediation_provisioning.py  test_remote_ingest.py  test_scan_coordinator.py  test_scan_now.py  test_scans_router.py  test_settings_admin.py  test_suitability.py  (+2 more)
tests/auth/: conftest.py  test_api_enforcement.py  test_bootstrap_and_stepup.py  test_forward_auth_trust.py  test_migration.py  test_providers.py  test_rbac_matrix.py  test_scope_filter.py  test_step_up_mfa.py
tests/backends/: conftest.py  test_ntfs.py  test_posix.py  test_rclone.py  test_remote.py  test_winattrs.py  test_windows_backend.py  test_zfs.py
tests/core/: test_agent_run_migration.py  test_agent_runs.py  test_audit.py  test_audit_prev_hash_migration.py  test_audit_store.py  test_browse.py  test_concierge_embeddings.py  test_concierge_queries.py  test_concierge_service.py  test_dedup.py  test_dedup_service.py  test_finalize.py  test_fs_entry_dev_migration.py  test_fullbit_migration.py  test_incremental.py  test_incremental_migration.py  test_job_queue.py  test_job_signing.py  test_keygen.py  test_nonce_store.py  test_notifications.py  test_notify_channels.py  test_orchestrator.py  test_provider_dedup.py  test_provider_hash_migration.py  test_riskclass.py  test_scan_coordinator.py  test_settings_store.py  test_suitability.py  test_volume_display_name_migration.py  test_watch.py
tests/deploy/: fakes.py  test_browse_ssh.py  test_engine.py  test_pure.py  test_runtime.py  test_ssh.py  test_winbundle.py
tests/inference/: test_embedding_providers.py  test_providers.py
tests/preview/: conftest.py  test_D6_decompression_bomb_killed.py  (+14 more)
(+323 files in other folders)
